--- a/spock-todo/spock-todo.cabal
+++ b/spock-todo/spock-todo.cabal
@@ -68,6 +68,11 @@ test-suite spock-todo-test
                      , hspec
                      , hspec-wai
                      , hspec-wai-json
+                     , persistent >=2.1.1.7 && <2.3
+                     , persistent-template
+                     , persistent-mysql
+                     , esqueleto
+                     , monad-logger
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
