--- a/spock-todo/spock-todo.cabal
+++ b/spock-todo/spock-todo.cabal
@@ -17,6 +17,7 @@ library
   exposed-modules:     Model
                      , Controller
                      , Route
+                     , Config
   build-depends:       base
                      , text
                      , bytestring
