--- a/spock-todo/spock-todo.cabal
+++ b/spock-todo/spock-todo.cabal
@@ -18,6 +18,7 @@ library
                      , Controller
                      , Route
                      , Config
+  other-modules:       Paths_spock_todo
   build-depends:       base
                      , text
                      , bytestring
