--- a/servant-todo/servant-todo.cabal
+++ b/servant-todo/servant-todo.cabal
@@ -16,11 +16,25 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Route
+                     , Model
+                     , Config
+                     --, Controller
   build-depends:       base >= 4.7 && < 5
+                     , persistent
+                     , persistent-template
+                     , persistent-mysql
+                     , esqueleto
+                     , monad-logger
                      , servant-server
                      , either
                      , aeson
                      , transformers
+                     , text
+                     , mtl
+                     , time
+                     , wai
+                     , wai-middleware-static
+                     , wai-extra
   default-language:    Haskell2010
   ghc-options:         -Wall
 
@@ -30,6 +44,7 @@ executable servant-todo
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
                      , servant-todo
+                     , persistent-mysql
                      , warp
   default-language:    Haskell2010
 
