--- a/servant-todo/servant-todo.cabal
+++ b/servant-todo/servant-todo.cabal
@@ -51,9 +51,16 @@ test-suite servant-todo-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:       AppSpec
   build-depends:       base
                      , servant-todo
+                     , wai
+                     , wai-extra
                      , hspec
+                     , hspec-wai
+                     , hspec-wai-json
+                     , persistent-mysql
+                     , monad-logger
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   default-language:    Haskell2010
